# LLMao-voice-packet-loss-poc

./: .gitignore  README.md
backend/: 0.4.0  README.md  app.py  audio_degradation_detector.py  audio_utils.py  requirements.txt
backend-low-latency/: .gitignore  Cargo.toml  README.md
backend-low-latency/src/: asr.rs  audio.rs  degradation.rs  main.rs  repair.rs  tts.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
icf_app/: README.md  audio_processor.py  main.py  pyproject.toml  run.sh
icf_app_rust/: Cargo.toml  README.md  run.sh
icf_app_rust/src/: audio_buffer.rs  audio_degradation.rs  audio_repair.rs  background_repair.rs  main.rs
icf_app_rust/src/audio_degradation/: gap_validator.rs  stream_analyzer.rs  types.rs
