[package]
name = "voice-packet-loss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

# AWS SDKs
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-polly = "1.21"
aws-sdk-bedrockruntime = "1.55"

# ASR
whisper-rs = { version = "0.11" }

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# ML
ort = { version = "1.16", features = ["download-binaries"] }

# Utils
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3