[tool.poetry]
name = "llmao-copilot"
version = "0.1.0"
description = "FMO Copilot app for real-time audio packet loss repair"
authors = ["RenAIssance Hackathon Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
icf-media-sdk = {path = "../../fmo-hackathon-demo/sdk/python", develop = true}
numpy = "*"
soundfile = "*"
librosa = "*"
openai-whisper = "*"
torch = "*"
TTS = {version = "*", python = ">=3.11,<3.12"}
transformers = "*"
sentencepiece = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
