[package]
name = "llmao_audio_repair_copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
icf_media_sdk = { path = "../../fmo-hackathon-demo/sdk/rust" }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hound = "3.5"
regex = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
rubato = "0.16.2"
